# superres

./: .dockerignore  .env  Dockerfile  README.md  common.py  config.py  final.py  lets.py  pyproject.toml  settings.yaml  srgan.py  test_server.py  train.py  utils.py
app/: __main__.py  celery_worker.py  flask.py  test.py
app/tasks/: do_something.py  form.html  new_tasks.py  resolution.py
app/templates/: data.html  form.html
cropped_tci/: 04b110b61f412bdbc55cced75fe57fdf_cropped.tiff
provision/commands/: docker_build.sh  docker_run.sh  templated.yaml
provision/containers/infra/: backend.yaml  db.yaml  flower.yaml  memcached.yaml  pgadmin.yaml  pgweb.yaml  portainer.yaml  rabbitmq.yaml  redis.yaml
provision/deploy_switches/: infra.yaml  service.yaml
provision/envs/development/: hosts.yaml
provision/envs/production/: hosts.yaml
provision/roles/lgblkb/defaults/: main.yaml
provision/roles/lgblkb/files/: .requirements.txt  .secret
provision/roles/lgblkb/files/poetry_cache/: pyproject.toml
provision/roles/lgblkb/filter_plugins/: helper.py
provision/roles/lgblkb/tasks/: base.yaml  deploy.yaml  envise.yaml  (+9 more)
provision/scripts/: base.yaml  infra.yaml  init.yaml  service.yaml
provision/settings/: infra.yaml  service.yaml  switch.yaml
provision/settings/docker/: all.yaml  infra.yaml  service.yaml
scripts/: test_server.py
shp/: missed.dbf  missed.shp  missed.shx  missed2.dbf  missed2.shp  missed2.shx  soltustik.dbf  soltustik.shp  soltustik.shx  soltustik_new.dbf  soltustik_new.shp  soltustik_new.shx  soltustik_slm.dbf  soltustik_slm.shp  soltustik_slm.shx  tiler_test.dbf  tiler_test.shp  tiler_test.shx  tiler_test_18.dbf  tiler_test_18.shp  tiler_test_18.shx  ukraine_1.dbf  ukraine_1.shp  ukraine_1.shx
watched/: watch_all.txt
(+1 files in other folders)
